2011-08-01  Don Porter  <dgp@users.sourceforge.net>

	* win/vc/rules.vc: Extend support to MSVC10.  Thanks to Twylite.

2011-06-27  Don Porter  <dgp@users.sourceforge.net>

	* configure.in:	Copied revisions from the "sampleextension" package
	* Makefile.in:	to keep compatible with the latest INSTALL changes
	in TEA 3.9.  
	* configure:	autoconf-2.59

2010-12-08 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Fixed Bug #3129844

2010-11-18  Don Porter  <dgp@users.sourceforge.net>

	* Makefile.in:		Revised the `make dist` target so that the
	* win/README.txt:	files under thread/win/vc in CVS are copied to
	* win/vc/makefile.vc:	thread/win in the release, where tcl/pkgs/
	* win/vc/thread_win.dsp:	expects to find them.

	* configure:	autoconf-2.59

2010-10-04 Zoran Vasiljevic <zv@archiware.com>

	* generic/configure      Regenrated for TEA 3.9. Bumped version string
	* generic/configiue.in   in all relevant files to 2.6.7  and autoconf'ed.
	* win/vc/pkg.vc

2010-09-28 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Initialize tsdPtr->interp to NULL immediately after
	releasing the interp on thread-exit that should hopefully resolve the 
	Tcl Bug #3026061

	* generic/threadCmd.c: Removed safe-init so safe-interps should not be 
	able to run thread commands directly.

	* lib/ttrace.tcl: Changed version to 2.6.7 to be in sync with main pkg.

	* configure.in: Bumped version to 2.6.7 and autoconf'ed.

2010-09-05  Donal K. Fellows  <dkf@users.sf.net>

	* doc/tpool.man, doc/tsv.man: Remove spaces in titledesc declaration;
	doctools currently does not like it at all when generating correct
	nroff output.

2010-08-12  Andreas Kupries  <andreask@activestate.com>

	* lib/ttrace.tcl (_serializensp, _serializeproc): Fixed typos which
	smashed namespace name and opening brace of a script together, leading
	to a syntax error for 'namespace eval' and preventing the use of
	package Ttrace.

2010-07-25  Donal K. Fellows  <dkf@users.sf.net>
